--- a/en/contact.html
+++ b/en/contact.html
@@ -10,6 +10,10 @@
 </head>
 <body>
     <nav class="title-nav position-fixed navbar navbar-expand-lg navbar-dark align-items-center justify-content-end w-100 top-0">
+        <div class="lag-box position-absolute d-flex top-0 left-0 text-light">
+            <a class="dropdown-item w-50 d-flex flex-column align-items-center justify-content-center" href="../th/contact.html"><img class="w-75 mb-2 pc-only" src="../images/th.png" alt="">TH</a>
+            <a class="dropdown-item w-50 d-flex flex-column align-items-center justify-content-center" href="contact.html"><img class="w-75 mb-2 pc-only" src="../images/en.png" alt="">EN</a>
+        </div>
         <a class="logo nav-link position-absolute p-0 ph-only" href="index.html"><img class="logo-img w-100" src="../images/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -33,15 +37,6 @@
                 </li>
                 <li class="nav-item text-center">
                     <a class="nav-link" href="contact.html"><img class="w-100 pc-only" src="../images/iCON_US-ENG.png"><span class="ph-only justify-content-center">Contact Us</span></a>
-                </li>
-                <li class="nav-item dropdown text-center">
-                    <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Langue
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="../th/contact.html">Thai</a>
-                        <a class="dropdown-item" href="contact.html">English</a>
-                    </div>
                 </li>
             </ul>
         </div>
