3種遊戲icon修改 修改購買鑽石的選項

--- a/en/diamond.html
+++ b/en/diamond.html
@@ -120,19 +120,19 @@
                                     <h3 class="position-relative w-100 text-center d-flex align-items-center justify-content-center line mb-4 color-y">Buy Diamond</h3>
                                     <div class="row w-100 mx-auto">
                                         <div class="game-card d-flex justify-content-center col-12 col-md-4 py-3">
-                                            <div class="card bg-black-50 text-light border border-warning overflow-hidden">
+                                            <div class="card bg-black-50 text-light border border-warning overflow-hidden cloth popular en">
                                                 <img src="../images/diamonds_01.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <h5 class="card-title text-center">105 UP</h5>
+                                                <h5 class="card-title text-center">35 THB</h5>
                                                 <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">PHP 162</a>
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="game-card d-flex justify-content-center col-12 col-md-4 py-3">
-                                            <div class="card bg-black-50 text-light border border-warning overflow-hidden cloth popular">
+                                            <div class="card bg-black-50 text-light border border-warning overflow-hidden">
                                                 <img src="../images/diamonds_02.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <h5 class="card-title text-center">210 UP</h5>
+                                                <h5 class="card-title text-center">139 THB</h5>
                                                 <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">PHP 324</a>
                                                 </div>
                                             </div>
@@ -141,7 +141,7 @@
                                             <div class="card bg-black-50 text-light border border-warning overflow-hidden">
                                                 <img src="../images/diamonds_03.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <h5 class="card-title text-center">315 UP</h5>
+                                                <h5 class="card-title text-center">349 THB</h5>
                                                 <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">PHP 486</a>
                                                 </div>
                                             </div>
@@ -150,7 +150,7 @@
                                             <div class="card bg-black-50 text-light border border-warning overflow-hidden">
                                                 <img src="../images/diamonds_04.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <h5 class="card-title text-center">530 UP</h5>
+                                                <h5 class="card-title text-center">699 THB</h5>
                                                 <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">PHP 810</a>
                                                 </div>
                                             </div>
@@ -159,7 +159,7 @@
                                             <div class="card bg-black-50 text-light border border-warning overflow-hidden">
                                                 <img src="../images/diamonds_05.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <h5 class="card-title text-center">1060 UP</h5>
+                                                <h5 class="card-title text-center">1000 THB</h5>
                                                 <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">PHP 1620</a>
                                                 </div>
                                             </div>
@@ -168,7 +168,7 @@
                                             <div class="card bg-black-50 text-light border border-warning overflow-hidden cloth best">
                                                 <img src="../images/diamonds_05.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <h5 class="card-title text-center">3180 UP</h5>
+                                                <h5 class="card-title text-center">2800 THB</h5>
                                                 <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">PHP 4860</a>
                                                 </div>
                                             </div>
