--- a/th/index.html
+++ b/th/index.html
@@ -141,19 +141,22 @@
 
             <div class="container-fluid p-0 py-5 bg-black-50">
                 <div class="container">
-                    <h2 class="position-relative w-100 text-center d-flex align-items-center justify-content-center color-y">常見問題</h2>
+                    <h2 class="position-relative w-100 text-center d-flex align-items-center justify-content-center color-y">คำถามที่พบบ่อย</h2>
                     <div class="accordion question mt-4" id="accordionExample">
                         <div class="card">
                             <div class="card-header" id="headingOne">
                                 <h3 class="mb-0">
                                     <button class="btn btn-link text-light w-100 text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                        問題1 +
+                                        รักษาระดับ VIP ยังไง 
                                     </button>
                                 </h3>
                             </div>
                             <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                                 <div class="card-body bg-black-50 text-light">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                    <dl>
+                                        <dd>- เติมเงินสะสมเดือนที่ผ่านมาให้ครบกำหนดของแต่ละระดับ VIP เช่น VIP 4 จะต้องเติมเงินสะสมรวม 5,000 ในเดือนที่ผ่านมา</dd>
+                                        <dd>- ทุกสิ้นเดือนจะมีแพ็กเกจพิเศษ ต่ออายุ VIP มาให้ซื้อราคา 100 บาทเท่านั้น เฉพาะ VIP 3 - VIP 6 </dd>
+                                    </dl>
                                 </div>
                             </div>
                         </div>
@@ -161,13 +164,21 @@
                             <div class="card-header" id="headingTwo">
                                 <h3 class="mb-0">
                                     <button class="btn btn-link text-light w-100 text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                        問題2 +
+                                        รับเพชรฟรีได้จากไหนบ้าง
                                     </button>
                                 </h3>
                             </div>
-                        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                            <div class="card-body bg-black-50 text-light">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                                <div class="card-body bg-black-50 text-light">
+                                    <dl>
+                                        <dd>- ล็อกอินครั้งแรกผ่าน Facebook หรือ Line รับ 1,000 ชิป</dd>
+                                        <dd>- ยืนยันตัวตนผ่านเบอร์โทรศัพท์ รับ 2,000 ชิป</dd>
+                                        <dd>- กดไลก์เพจ FB : มารวย99 รับ 500 ชิป</dd>
+                                        <dd>- หมุนวงล้อประจำวัน ลุ้นรับสูงสุด 10,000 ชิป </dd>
+                                        <dd>- โบนัสเลื่อนขั้น VIP รับสูงสุด 800,000 ชิป</dd>
+                                        <dd>- โบนัสคงระดับ VIP รับสูงสุด 350,000 ชิป</dd>
+                                        <dd>- เข้าร่วมกิจกรรมที่เพจ FB : มารวย99 ลุ้นรับสูงสุด 13,800 ชิป</dd>
+                                    </dl>
                                 </div>
                             </div>
                         </div>
@@ -175,13 +186,16 @@
                             <div class="card-header" id="headingThree">
                                 <h3 class="mb-0">
                                     <button class="btn btn-link text-light w-100 text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                        問題3 +
+                                        ทำไมส่งเพชรไม่ได้
                                     </button>
                                 </h3>
                             </div>
                             <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                                 <div class="card-body bg-black-50 text-light">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                    <dl>
+                                        <dd>- จะต้องทำยอดเดิมพันให้เป็น 0 ก่อนถึงจะส่งเพชรให้คนอื่นได้ โดยสามารถเช็คได้จาก เมนู "ส่งชิป" เลือก "จำนวนยอดเดิมพันคงเหลือ" จะเห็นคำว่ายอดเดิมพันทั้งหมดที่ต้องการ ตรงนี้จะบอกว่าเหลือยอดอีกเท่าไหร่</dd>
+                                        <dd>- สะสมยอดเดิมพันจากการเล่นเกมหลังครบตามกำหนดนั้น ๆ จะสามารถส่งมอบเพชรให้กันได้</dd>
+                                    </dl>
                                 </div>
                             </div>
                         </div>
