--- a/en/index.html
+++ b/en/index.html
@@ -76,10 +76,10 @@
                     <div class="row w-100 m-0 my-5">
                         <div class="col-12 col-md-6 d-flex align-items-center justify-content-center flex-wrap text-light">
                             <dl>
-                                <dd>– Download free, easy to play only login by Facebook or Line. you will get free chips everyday in daily rewards section</dd>
-                                <dd>– Jackpot you can choose ! more than 50 top hit casino game</dd>
-                                <dd>– Famous fishing game, Card game, Slot game and many entertaining game feel like real casino</dd>
-                                <dd>– More activities more win we have every week game activity you can choose your win from Top 20 list or Extra win win more than 3,000,000 Chips</dd>
+                                <dd>- Download free, easy to play only login by Facebook or Line. you will get free chips everyday in daily rewards section</dd>
+                                <dd>- Jackpot you can choose ! more than 50 top hit casino game</dd>
+                                <dd>- Famous fishing game, Card game, Slot game and many entertaining game feel like real casino</dd>
+                                <dd>- More activities more win we have every week game activity you can choose your win from Top 20 list or Extra win win more than 3,000,000 Chips</dd>
                             </dl>
                         </div>
                         <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
@@ -145,19 +145,22 @@
 
             <div class="container-fluid p-0 py-5 bg-black-50">
                 <div class="container">
-                    <h2 class="position-relative w-100 text-center d-flex align-items-center justify-content-center color-y">常見問題</h2>
+                    <h2 class="position-relative w-100 text-center d-flex align-items-center justify-content-center color-y">FAQ</h2>
                     <div class="accordion question mt-4" id="accordionExample">
                         <div class="card">
                             <div class="card-header" id="headingOne">
                                 <h3 class="mb-0">
                                     <button class="btn btn-link text-light w-100 text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                        問題1 +
+                                        How to keep the VIP level?
                                     </button>
                                 </h3>
                             </div>
                             <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                                 <div class="card-body bg-black-50 text-light">
-                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                    <dl>
+                                        <dd>- Top up the last month's accumulated balance to reach the VIP level. For example, VIP 4 must top up the accumulated balance of 5,000 baht in the last month.</dd>
+                                        <dd>- A special VIP package with purchase for only 100 baht at the end of the month (only VIP 3 - VIP 6).</dd>
+                                    </dl>
                                 </div>
                             </div>
                         </div>
@@ -165,13 +168,21 @@
                             <div class="card-header" id="headingTwo">
                                 <h3 class="mb-0">
                                     <button class="btn btn-link text-light w-100 text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                        問題2 +
+                                        How can I get free diamonds?
                                     </button>
                                 </h3>
                             </div>
-                        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                            <div class="card-body bg-black-50 text-light">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                                <div class="card-body bg-black-50 text-light">
+                                    <dl>
+                                        <dd>- Log in for the first time via Facebook or Line, get 1,000 chips</dd>
+                                        <dd>- Verify identity via phone number, get 2,000 chips</dd>
+                                        <dd>- Like FB page: Maruay99, get 500 Chips</dd>
+                                        <dd>- Spin the daily wheel, get up to 10,000 chips</dd>
+                                        <dd>- VIP Level up bonus, get up to 800,000 chips</dd>
+                                        <dd>- VIP awards bonus, get up to 350,000 chips</dd>
+                                        <dd>- Join the activity on the FB page: Maruay99, get up to 13,800 chips</dd>
+                                    </dl>
                                 </div>
                             </div>
                         </div>
@@ -179,13 +190,16 @@
                             <div class="card-header" id="headingThree">
                                 <h3 class="mb-0">
                                     <button class="btn btn-link text-light w-100 text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                        問題3 +
+                                        Why can't I send diamonds?
                                     </button>
                                 </h3>
                             </div>
                             <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                                 <div class="card-body bg-black-50 text-light">
-                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                    <dl>
+                                        <dd>- The turn over must be set to 0 before you send diamonds to others. You can be check it from the menu "Exchange" then select "The remaining bets", it will show how many of diamonds are required at the word "All bets required".</dd>
+                                        <dd>- Accumulate the bet amount from playing the game, after completing the accumulated bet required, you can be sent the diamonds.</dd>
+                                    </dl>
                                 </div>
                             </div>
                         </div>
