更換送收禮圖 / 賣鑽頁更新

--- a/en/contact.html
+++ b/en/contact.html
@@ -92,16 +92,16 @@
     </main>
 
     <!-- Regulations Modal -->
-    <div class="modal fade" id="regulations" tabindex="-1" role="dialog" aria-labelledby="regulationsTitle" aria-hidden="true">
+    <div class="modal p-0 fade" id="regulations" tabindex="-1" role="dialog" aria-labelledby="regulationsTitle" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
-                <div class="modal-header">
+                <div class="modal-header title-nav text-light">
                     <h5 class="modal-title" id="regulationsTitle">ข้อบังคับของผู้ใช้</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button type="button" class="close text-light" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body bg-dark-red text-light">
                     <p>ข้อตกลงและเงื่อนไขการสมัครเป็นสมาชิกในการให้บริการเกมออนไลน์ของ (มารวย99)</p>
                     <p>ข้อตกลงการสมัครสมาชิกและการใช้บริการเกมออนไลน์ ยินดีต้อนรับสมาชิกใหม่ของ มารวย99 เพื่อปกป้องสิทธิของผู้ใช้บริการ โปรดอ่านเงื่อนไขการให้บริการทั้งหมดและหากท่านกดเลือก ยอมรับ ก็จะถือว่าได้ศึกษาและยินยอมที่จะปฏิบัติ ตามข้อตกลงและเงื่อนไขทั้งหมดต่อไปนี้ของบริการสมาชิก</p>
                     <p>ข้อ 1 ขอบเขตของข้อตกลงและเงื่อนไขการใช้บริการ</p>
@@ -113,16 +113,16 @@
     </div>
 
     <!-- Privacy Modal -->
-    <div class="modal fade" id="privacy" tabindex="-1" role="dialog" aria-labelledby="privacyTitle" aria-hidden="true">
+    <div class="modal p-0 fade" id="privacy" tabindex="-1" role="dialog" aria-labelledby="privacyTitle" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
-                <div class="modal-header">
+                <div class="modal-header title-nav text-light">
                     <h5 class="modal-title" id="privacyTitle">ประกาศด้านนโยบายความเป็นส่วนตัว</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button type="button" class="close text-light" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body bg-dark-red text-light">
                     <p>มารวย99 มุ่งมั่นที่จะปกป้องความเป็นส่วนตัวของผู้ใช้ และมอบประสบการณ์ด้านการเล่นเกมผ่านทางโซเชียลมีเดียให้ดียิ่งขึ้น นโยบายความเป็นส่วนตัวนี้ได้ถูกสร้างขึ้นมาเพื่อแจ้งให้คุณทราบเกี่ยวกับวิธีที่ มารวย99 จัดการ เก็บรวบรวม จัดเก็บ แบ่งปัน ใช้งาน และปกป้องข้อมูลที่คุณได้ระบุเกี่ยวกับเกม หรือแอพพลิเคชั่นต่าง ๆ ของ มารวย99 เมื่อคุณเล่นเกมของเรา หรือเข้าใช้บริการ ผลิตภัณฑ์ เนื้อหาต่าง ๆ ของเรา เว็บไซต์ Maruay99.com และ/หรือโดเมนที่ให้บริการโดย มารวย99</p>
                     <h4>นโยบายความเป็นส่วนตัว</h4>
                     <p>โปรดอ่านข้อกำหนดเกี่ยวกับนโยบายความเป็นส่วนตัวอย่างรอบคอบ มารวย99 ปกป้องความเป็นส่วนตัวของคุณอย่างเคร่งครัด</p>
