--- a/th/diamond.html
+++ b/th/diamond.html
@@ -82,24 +82,16 @@
                             <div class="tab-pane fade show active" id="pills-send" role="tabpanel" aria-labelledby="pills-send-tab">
                                 <div class="d-flex flex-column align-items-center justify-content-center py-4 px-2">
                                     <h3 class="position-relative w-100 text-center d-flex align-items-center justify-content-center line mb-4 color-y">Send Gift</h3>
-                                    <img class="img-fluid" src="../images/send-1.jpg" alt="" srcset="">
-                                    <h4 class="text-light mb-4">Click the Bank icon</h4>
-                                    <img class="img-fluid" src="../images/send-2.jpg" alt="" srcset="">
-                                    <h4 class="text-light mb-4">Click your friend list</h4>
-                                    <img class="img-fluid" src="../images/send-3.jpg" alt="" srcset="">
-                                    <h4 class="text-light mb-4">Enter your friend's name and click on Exchange</h4>
-                                    <img class="img-fluid" src="../images/send-4.jpg" alt="" srcset="">
-                                    <h4 class="text-light mb-4">Select the amount of diamonds to sent and Click send.</h4>
-                                    <img class="img-fluid" src="../images/send-5.jpg" alt="" srcset="">
-                                    <h4 class="text-light mb-4">Click Cofirm</h4>
-                                    <img class="img-fluid" src="../images/send-6.jpg" alt="" srcset="">
-                                    <h4 class="text-light mb-4">Click on the Transfer Center.</h4>
-                                    <img class="img-fluid" src="../images/send-7.jpg" alt="" srcset="">
-                                    <h4 class="text-light mb-4">Confirm Send</h4>
-                                    <img class="img-fluid" src="../images/send-8.jpg" alt="" srcset="">
-                                    <h4 class="text-light mb-4">Click Cofirm</h4>
-                                    <img class="img-fluid" src="../images/send-9.jpg" alt="" srcset="">
-                                    <h4 class="text-light">Click Cofirm</h4>
+                                    <img class="img-fluid" src="../images/send-gift/1.png" alt="" srcset="">
+                                    <h4 class="text-light mb-4">วิธีการส่งชิป</h4>
+                                    <img class="img-fluid" src="../images/send-gift/2.png" alt="" srcset="">
+                                    <h4 class="text-light mb-4">1. กดที่เมนูในการส่งชิปที่มุมขวาบน</h4>
+                                    <img class="img-fluid" src="../images/send-gift/3.png" alt="" srcset="">
+                                    <h4 class="text-light mb-4">2. เลือกรายชื่อที่จะทำการส่งชิป โดยรายชื่อที่จะสามารถส่งชิปไปหาได้นั้น ผู้เล่นจะต้องเพิ่มเป็นเพื่อนก่อน</h4>
+                                    <img class="img-fluid" src="../images/send-gift/4.png" alt="" srcset="">
+                                    <h4 class="text-light mb-4">3. เมือเลือกเพื่อนที่ต้องการส่งก็ใส่จำนวนเพชรได้เลย โดยการส่งเพชรให้เพื่อนจะมีค่าธรรมเนียม 2% </h4>
+                                    <img class="img-fluid" src="../images/send-gift/5.png" alt="" srcset="">
+                                    <h4 class="text-light mb-4">4. วิธีการตรวจสอบการส่งเพชร สามารถดูได้ที่ศูนย์ส่งมอบ ตรวจสอบได้ว่าส่งอะไรให้เพื่อนคนไหนไปบ้าง</h4>
                                 </div>
                             </div>
                             <div class="tab-pane fade" id="pills-receiver" role="tabpanel" aria-labelledby="pills-receiver-tab">
