--- a/en/diamond.html
+++ b/en/diamond.html
@@ -82,39 +82,31 @@
                             <div class="tab-pane fade show active" id="pills-send" role="tabpanel" aria-labelledby="pills-send-tab">
                                 <div class="d-flex flex-column align-items-center justify-content-center py-4 px-2">
                                     <h3 class="position-relative w-100 text-center d-flex align-items-center justify-content-center line mb-4 color-y">Send Gift</h3>
-                                    <img class="img-fluid" src="../images/send-1.jpg" alt="" srcset="">
-                                    <h4 class="text-light mb-4">Click the Bank icon</h4>
-                                    <img class="img-fluid" src="../images/send-2.jpg" alt="" srcset="">
-                                    <h4 class="text-light mb-4">Click your friend list</h4>
-                                    <img class="img-fluid" src="../images/send-3.jpg" alt="" srcset="">
-                                    <h4 class="text-light mb-4">Enter your friend’s name and click on Exchange</h4>
-                                    <img class="img-fluid" src="../images/send-4.jpg" alt="" srcset="">
-                                    <h4 class="text-light mb-4">Select the amount of diamonds to sent and Click send.</h4>
-                                    <img class="img-fluid" src="../images/send-5.jpg" alt="" srcset="">
-                                    <h4 class="text-light mb-4">Click Cofirm</h4>
-                                    <img class="img-fluid" src="../images/send-6.jpg" alt="" srcset="">
-                                    <h4 class="text-light mb-4">Click on the Transfer Center.</h4>
-                                    <img class="img-fluid" src="../images/send-7.jpg" alt="" srcset="">
-                                    <h4 class="text-light mb-4">Confirm Send</h4>
-                                    <img class="img-fluid" src="../images/send-8.jpg" alt="" srcset="">
-                                    <h4 class="text-light mb-4">Click Cofirm</h4>
-                                    <img class="img-fluid" src="../images/send-9.jpg" alt="" srcset="">
-                                    <h4 class="text-light">Click Cofirm</h4>
+                                    <img class="img-fluid" src="../images/send-gift/1.png" alt="" srcset="">
+                                    <h4 class="text-light mb-4">วิธีการส่งชิป</h4>
+                                    <img class="img-fluid" src="../images/send-gift/2.png" alt="" srcset="">
+                                    <h4 class="text-light mb-4">1. กดที่เมนูในการส่งชิปที่มุมขวาบน</h4>
+                                    <img class="img-fluid" src="../images/send-gift/3.png" alt="" srcset="">
+                                    <h4 class="text-light mb-4">2. เลือกรายชื่อที่จะทำการส่งชิป โดยรายชื่อที่จะสามารถส่งชิปไปหาได้นั้น ผู้เล่นจะต้องเพิ่มเป็นเพื่อนก่อน</h4>
+                                    <img class="img-fluid" src="../images/send-gift/4.png" alt="" srcset="">
+                                    <h4 class="text-light mb-4">3. เมือเลือกเพื่อนที่ต้องการส่งก็ใส่จำนวนเพชรได้เลย โดยการส่งเพชรให้เพื่อนจะมีค่าธรรมเนียม 2% </h4>
+                                    <img class="img-fluid" src="../images/send-gift/5.png" alt="" srcset="">
+                                    <h4 class="text-light mb-4">4. วิธีการตรวจสอบการส่งเพชร สามารถดูได้ที่ศูนย์ส่งมอบ ตรวจสอบได้ว่าส่งอะไรให้เพื่อนคนไหนไปบ้าง</h4>
                                 </div>
                             </div>
                             <div class="tab-pane fade" id="pills-receiver" role="tabpanel" aria-labelledby="pills-receiver-tab">
                                 <div class="d-flex flex-column align-items-center justify-content-center py-4 px-2">
                                     <h3 class="position-relative w-100 text-center d-flex align-items-center justify-content-center line mb-4 color-y">Receiver Gift</h3>
-                                    <img class="img-fluid" src="../images/receiver-1.jpg" alt="" srcset="">
-                                    <h4 class="text-light mb-4">Click OK</h4>
-                                    <img class="img-fluid" src="../images/receiver-2.jpg" alt="" srcset="">
-                                    <h4 class="text-light mb-4">Wait for sender to confirm.</h4>
-                                    <img class="img-fluid" src="../images/receiver-3.jpg" alt="" srcset="">
-                                    <h4 class="text-light mb-4">Click Receive</h4>
-                                    <img class="img-fluid" src="../images/receiver-4.jpg" alt="" srcset="">
-                                    <h4 class="text-light mb-4">Click Cofirm</h4>
-                                    <img class="img-fluid" src="../images/receiver-5.jpg" alt="" srcset="">
-                                    <h4 class="text-light mb-4">Successful send, return to the main page to check out diamond.</h4>
+                                    <img class="img-fluid" src="../images/received/1.png" alt="" srcset="">
+                                    <h4 class="text-light mb-4">วิธีการรับของ</h4>
+                                    <img class="img-fluid" src="../images/received/2.png" alt="" srcset="">
+                                    <h4 class="text-light mb-4">1. เมื่อมีผู้ส่งเพชรมาให้ ผู้เล่นจะพบว่าที่ช่องส่งเพชรจะมีการแจ้งเตือนว่ามีการส่งเพชรมาให้</h4>
+                                    <img class="img-fluid" src="../images/received/3.png" alt="" srcset="">
+                                    <h4 class="text-light mb-4">2. เมื่อเปิดเข้าไปจะพบข้อมูลของเพชรที่ผู้เล่นได้รับจากผู้เล่นอื่น หากต้องการรับให้กด ตกลง หากไม่ต้องการรับ กด ไม่รับ</h4>
+                                    <img class="img-fluid" src="../images/received/4.png" alt="" srcset="">
+                                    <h4 class="text-light mb-4">3. เมื่อกดรับแล้วให้รอผู้ส่งเพชรกดยืนยันว่าเป็นการรับส่งจริง</h4>
+                                    <img class="img-fluid" src="../images/received/5.png" alt="" srcset="">
+                                    <h4 class="text-light mb-4">4. เมื่อผู้ส่งกดยืนยัน การส่งเพชรจะถูกย้ายไปที่ศูนย์ส่งมอบ ผู้รับกดรับอีกครั้งเพื่อยืนยันการรับเพชร หลังจากกดรับเพชรจะเข้าไปในกระเป๋าของผู้เล่น </h4>
                                 </div>
                             </div>
                             <div class="tab-pane fade" id="pills-dianond" role="tabpanel" aria-labelledby="pills-dianond-tab">
@@ -126,8 +118,7 @@
                                             <div class="card bg-black-50 text-light border border-warning overflow-hidden cloth popular en">
                                                 <img src="../images/diamonds_01.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <h5 class="card-title text-center">35 THB</h5>
-                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">PHP 162</a>
+                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">35 THB</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -135,8 +126,7 @@
                                             <div class="card bg-black-50 text-light border border-warning overflow-hidden">
                                                 <img src="../images/diamonds_02.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <h5 class="card-title text-center">139 THB</h5>
-                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">PHP 324</a>
+                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">139 THB</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -144,8 +134,7 @@
                                             <div class="card bg-black-50 text-light border border-warning overflow-hidden">
                                                 <img src="../images/diamonds_03.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <h5 class="card-title text-center">349 THB</h5>
-                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">PHP 486</a>
+                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">349 THB</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -153,8 +142,7 @@
                                             <div class="card bg-black-50 text-light border border-warning overflow-hidden">
                                                 <img src="../images/diamonds_04.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <h5 class="card-title text-center">699 THB</h5>
-                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">PHP 810</a>
+                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">699 THB</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -162,8 +150,7 @@
                                             <div class="card bg-black-50 text-light border border-warning overflow-hidden">
                                                 <img src="../images/diamonds_05.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <h5 class="card-title text-center">1000 THB</h5>
-                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">PHP 1620</a>
+                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">1000 THB</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -171,8 +158,7 @@
                                             <div class="card bg-black-50 text-light border border-warning overflow-hidden cloth best">
                                                 <img src="../images/diamonds_05.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <h5 class="card-title text-center">2800 THB</h5>
-                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">PHP 4860</a>
+                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">2800 THB</a>
                                                 </div>
                                             </div>
                                         </div>
