--- a/th/diamond.html
+++ b/th/diamond.html
@@ -118,8 +118,7 @@
                                             <div class="card bg-black-50 text-light border border-warning overflow-hidden cloth popular th">
                                                 <img src="../images/diamonds_01.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <h5 class="card-title text-center">35 THB</h5>
-                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">PHP 162</a>
+                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">35 THB</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -127,8 +126,7 @@
                                             <div class="card bg-black-50 text-light border border-warning overflow-hidden">
                                                 <img src="../images/diamonds_02.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <h5 class="card-title text-center">139 THB</h5>
-                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">PHP 324</a>
+                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">139 THB</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -136,8 +134,7 @@
                                             <div class="card bg-black-50 text-light border border-warning overflow-hidden">
                                                 <img src="../images/diamonds_03.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <h5 class="card-title text-center">349 THB</h5>
-                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">PHP 486</a>
+                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">349 THB</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -145,8 +142,7 @@
                                             <div class="card bg-black-50 text-light border border-warning overflow-hidden">
                                                 <img src="../images/diamonds_04.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <h5 class="card-title text-center">699 THB</h5>
-                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">PHP 810</a>
+                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">699 THB</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -154,8 +150,7 @@
                                             <div class="card bg-black-50 text-light border border-warning overflow-hidden">
                                                 <img src="../images/diamonds_05.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <h5 class="card-title text-center">1000 THB</h5>
-                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">PHP 1620</a>
+                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">1000 THB</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -163,8 +158,7 @@
                                             <div class="card bg-black-50 text-light border border-warning overflow-hidden cloth best">
                                                 <img src="../images/diamonds_05.png" class="card-img-top" alt="...">
                                                 <div class="card-body d-flex flex-column justify-content-between">
-                                                <h5 class="card-title text-center">2800 THB</h5>
-                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">PHP 4860</a>
+                                                <a name="btn" data-no="0" data-kids="others" data-target="#productDescription" data-toggle="modal" href="#" class="btn btn-outline-warning w-100">2800 THB</a>
                                                 </div>
                                             </div>
                                         </div>
