--- a/th/diamond.html
+++ b/th/diamond.html
@@ -169,24 +169,36 @@
                                 <div class="d-flex flex-column align-items-center justify-content-center py-4 px-2">
                                     <h3 class="position-relative w-100 text-center d-flex align-items-center justify-content-center line mb-4 color-y">Introduce</h3>
                                     <div class="row w-100 mx-auto">
-                                        <div class="col-12 col-md-8">
-                                            <img src="../images/introduce.jpg" class="card-img-top" alt="...">
-                                        </div>
-                                        <div class="col-12 col-md-4 p-0">
+                                        <div class="col-12 col-md-8 mx-auto">
+                                            <img src="../images/introduce/1.png" class="card-img-top" alt="...">
                                             <ol class="dataText text-light my-3">
-                                                <li class="h6">โปรไฟล์สามารถเปลี่ยนรูปประจำตัวและดูข้อมูลทั่วไป</li>
-                                                <li class="h6">เลเวลสูงขึ้นมีสิทธิประโยชน์มากขึ้น</li>
-                                                <li class="h6">ระดับ VIP สูงขึ้นมีสิทธิประโยชน์มากขึ้น</li>
-                                                <li class="h6">แสดงจำนวนเพชรที่มีอยู่</li>
-                                                <li class="h6">หน้าเติมเงิน</li>
-                                                <li class="h6">หน้าแพ็กเกจ</li>
-                                                <li class="h6">Ranking มังกรและเสือ</li>
-                                                <li class="h6">ห้องแชท</li>
-                                                <li class="h6">ส่งของขวัญ</li>
-                                                <li class="h6">อันดับ Ranking</li>
-                                                <li class="h6">คู่มือรวย</li>
-                                                <li class="h6">ฝ่ายบริการลูกค้า</li>
-                                                <li class="h6">ตั้งค่า</li>
+                                                <li class="h6">ก่อนอื่นเลย เรามาเริ่มจากมุมซ้ายบนที่รูปโปรไฟล์ของเรา เมือคลิกที่ไอคอนรูปเรา จะแสดงข้อมูลส่วนตัวของเรา เช่น การเดิมพันทั้งหมดของสัปดาห์ล่าสุด รวมถึงวันที่สร้างบัญชีและเวลาเดิมพันครั้งล่าสุด </li>
+                                                <li class="h6">ไอคอนฝั่งขวาถัดมาคือเลเวลของเรา</li>
+                                                <li class="h6">วีไอพี ยิ่งเลเวลวีไอพีสูงเท่าไร สิทธิ์ที่เราได้รับก็จะเพิ่มขึ้น สามารถกดเข้าไปเช็คได้เลยว่ายังขาดอีกเท่าไรถึงจะอัพเวล</li>
+                                                <li class="h6">รูปเพชร จะแสดงจำนวนเพชรคงเหลือทั้งหมด เมือเข้าเกมไปค่าของเพชรจะคูณ 100 หรือ 10,000 ตามที่เกมนั่นกำหนด อย่าลืมตรวจเช็คให้ดีก่อนเข้าเล่นมินิเกม</li>
+                                                <li class="h6">ช่องเติมเงิน เราสามารถเติมเงินเพื่อซื้อของต่าง ๆ ในเกม ผ่านทาง Google play store ได้</li>
+                                                <li class="h6">เห็นเวลานับถอยหลังนั่นไหม ใช่แล้วมันคือโปรโมชั่นจำกัดเวลา เฉพาะช่วงเวลาใดเวลาหนึ่งด้วยละ ถ้าเข้าเกมมาถูกเวลาก็จะได้โปรดี ๆ ไอเทมเกมเด็ด ๆ ไปเลย</li>
+                                                <li class="h6">รูปกล่องของขวัญ คือโปรโมชั่น บัตรไอเทมมาให้เรา ได้ไปล่าบอสกับรางวัลสุดพิเศษกัน</li>
+                                                <li class="h6">รูปมังกร/เสือ เป็นอันดับการเล่นเกม slot ต่าง ๆ</li>
+                                                <li class="h6">ระบบแชท ให้เราสื่อสารกันทั่ว คุยกันถามกัน แต่ถ้ามีคนทักมาขอไอดีเราต่างๆอย่าหลงเชื่อไปให้เขาโดยเด็ดขาดละ </li>
+                                                <li class="h6">ส่งชิป เอาเพชรที่เรามีส่งไปให้เพื่อนของเราหรือแลกเป็นของอย่างอื่นกับตัวแทนของเราได้เลย</li>
+                                            </ol>
+                                            <img src="../images/introduce/2.png" class="card-img-top" alt="...">
+                                            <h5 class="text-center text-light">แถบบนหมดแล้วมาต่อกันที่แถบล่างกัน</h5>
+                                            <ol class="dataText text-light my-3">
+                                                <li class="h6"> วงล้อประจำวัน เราสามารถเข้าไปหมุนฟรีเอารางวัลได้ทุกวันเลย ทุบไข่ จะให้เราสุ่มได้รับของรางวัลต่างๆหรือไอเทมก็เป็นได้ และหากช่วงไหนมีกิจกรรมล็อกอิน ก็จะมีขึ้นมาในแถบนี้ อย่าลืมเช็คดูให้ละเอียด</li>
+                                                <li class="h6">ร้านค้าพิเศษ ในนั่นมีไอเทมขายเต็มเลยละ ซื้อไปได้ใช้แน่นอน มีรีเพชรให้สุ่มลดราคาไอเทมอีกด้วย บัตรกำนัลก็เอาไปแลกเป็นไอเทมอย่างอื่นได้ ใช้ทั้งที ใช้ให้คุ้ม</li>
+                                                <li class="h6">แรงค์กิ้ง ใครรวยสุดอันดับหนึ่งเอ่ย มีชื่อเราติดอยู่ในนั่นหรือเปล่า มีอันดับชนะอื่นๆให้ดูอีกเยอะเลย</li>
+                                                <li class="h6">กล่องจดหมาย เมื่อเราไปร่วมกิจกรรมต่างๆหรือได้รับรางวัลใดๆมา จะถูกส่งเข้ากล่องจดหมายโดยอัตโนมัติเลยละ อยากร่วมสนุกกับเรา ติดตามกิจกรรมดีๆได้ที่เพจ FB มารวย หรือแอด Line@MR99TALK </li>
+                                                <li class="h6">กระเป๋า ในนั่นจะมีไอเทมที่เราได้มาพร้อมกับไอเทมใช้งานอื่นๆอีกมากมาย ทั้งรูปแบบของอาวุธปืนหรือกรอบระดับวีไอพี</li>
+                                                <li class="h6">กิจกรรม เป็นกิจกรรมประจำสัปดาห์หรือรายเดือน ที่อธิบายกติกา เงื่อนไขการเข้าเล่น รางวัลที่จะเอามาแจก อยากติดตามแบบใกล้ชิด ติดตาม FB เราสิ ในนั่นจะมีประกาศไว้ด้วยน้ะ ไปร่วมความสนุกได้เลย</li>
+                                            </ol>
+                                            <img src="../images/introduce/3.png" class="card-img-top" alt="...">
+                                            <h5 class="text-center text-light">ต่อไปเป็นไอคอนฝั่งซ้ายมือ</h5>
+                                            <ol class="dataText text-light my-3">
+                                                <li class="h6">โหมดท้าชิง คือโหมด สำหรับผู้เล่นทุกคนมาท้าทายความสามารถกัน โดยในโหมดนี้จำนวนแลกเพชรจะเท่ากัน 1 : 100</li>
+                                                <li class="h6">โหมดทั่วไป คือเกมที่มีจำนวนแลกเพชร 1: 10000 ทำให้ผู้เล่นสนุกมากยิ่งขึ้น</li>
+                                                <li class="h6">เกมที่เล่นล่าสุด คือ เกมที่ผู้เล่นเข้าเล่นล่าสุด หากอยากกลับไปเล่นเกมที่ผ่านมา กดตรงนี้ได้เลย</li>
                                             </ol>
                                         </div>
                                     </div>
